Adding notifications for success & failure sending release notes for analysis

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -8,6 +8,9 @@
         </p>
     </div>
     <div class="row align-items-center">
+        <div class="col-12">
+            {{ alert }}
+        </div>
       <div class="col-12">
         {{ coaching }}
       </div>
